<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeView"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true"
        >
        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/sample_wallpaper"
            android:scaleType="centerCrop"
            android:contentDescription="@string/home_wallpaper_description" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_filter" />
    </FrameLayout>

    <TextView
        android:id="@+id/home_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="@dimen/home_title"
        android:textStyle="bold"
        android:textColor="@color/md_theme_dark_onBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/home_button_settings"
        android:layout_marginStart="@dimen/basic_margin"
        android:layout_marginEnd="@dimen/basic_margin"
        android:layout_marginTop="@dimen/double_margin"
        />

    <ImageButton
        android:id="@+id/home_button_settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/double_margin"
        android:layout_marginEnd="@dimen/basic_margin"
        android:background="@drawable/selector_icon_button"
        android:contentDescription="@string/home_settings_description"
        android:src="@drawable/ic_round_settings"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_author"
        android:textSize="@dimen/home_author"
        android:textColor="@color/md_theme_dark_onBackground"

        app:layout_constraintTop_toBottomOf="@id/home_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/basic_margin"
        android:layout_marginTop="@dimen/half_margin"
        />

    <TextView
        android:id="@+id/home_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_date"
        android:textSize="@dimen/home_date"
        android:textStyle="bold"
        android:textColor="@color/md_theme_dark_onBackground"

        app:layout_constraintTop_toBottomOf="@id/home_author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/basic_margin"
        android:layout_marginTop="@dimen/basic_margin"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_manually_run_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_manually_button"
        app:strokeWidth="1dp"
        android:textSize="@dimen/button_text_size"
        android:textAllCaps="true"
        app:cornerRadius="@dimen/rounded_button_radius"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="@color/md_theme_dark_surfaceTint"
        app:strokeColor="@color/md_theme_dark_surfaceTint"
        android:visibility="invisible"

        app:layout_constraintBottom_toTopOf="@id/home_more_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/double_margin"
        android:layout_marginBottom="@dimen/basic_margin"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_more_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_more_button"
        app:strokeWidth="1dp"
        android:textSize="@dimen/button_text_size"
        android:textAllCaps="true"
        app:cornerRadius="@dimen/rounded_button_radius"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="@color/md_theme_dark_onBackground"
        app:strokeColor="@color/md_theme_dark_onBackground"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/double_margin"
        android:layout_marginBottom="@dimen/basic_margin"
        />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading_circle"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminate="true"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/home_text_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/description_text"
        android:text="@string/loading_text"
        android:textColor="@color/md_theme_dark_onBackground"
        android:textStyle="bold"
        android:textAlignment="center"

        app:layout_constraintTop_toBottomOf="@id/loading_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/half_margin"
        />

</androidx.constraintlayout.widget.ConstraintLayout>