<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.MoreOptionsBottomSheetView"
    android:padding="@dimen/basic_margin"
    >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/more_options_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_save"
        app:drawableTint="?colorOnBackground"
        android:text="@string/more_options_download"
        android:textSize="18sp"
        android:drawablePadding="20dp"
        android:padding="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/more_options_set_both"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_wallpaper"
        app:drawableTint="?colorOnBackground"
        android:text="@string/more_options_set_both"
        android:textSize="18sp"
        android:drawablePadding="20dp"
        android:padding="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/more_options_download"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/more_options_set_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_home"
        app:drawableTint="?colorOnBackground"
        android:text="@string/more_options_set_home_Screen"
        android:textSize="18sp"
        android:drawablePadding="20dp"
        android:padding="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/more_options_set_both"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/more_options_set_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_lock_screen"
        app:drawableTint="?colorOnBackground"
        android:text="@string/more_options_set_lock_screen"
        android:textSize="18sp"
        android:drawablePadding="20dp"
        android:padding="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/more_options_set_home"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        />
</androidx.constraintlayout.widget.ConstraintLayout>